@startuml

abstract Enemigo {
    - int vida
    - int danio
    - int creditos
    - Movedor movedor

    + int atacado(int danio)
    + int getCreditos()
    + boolean estaVivo()
    + Parcela mover()
    + void {abstract} atacar()
}

class Hormiga {
    - int vida
    - int danio
    - int creditos
    - Movedor movedor

    + Hormiga(Parcela parcela)
    + atacar(Jugador jugador)
    + atacado(int danio)
}

class Arania {
    - int vida
    - int danio
    - int creditos
    - Movedor movedor

    + void atacar(Jugador jugador)
}

class Topo {
    - int vida
    - int danio
    - int creditos
    - Movedor movedor
    - int movimientos
    - Pasarela pasarela

    + void atacado(int danio)
    + void atacar(Jugador jugador, int turno)
    + void mover()
}

class Lechuza {
    - int vida
    - int danio
    - int creditos
    - Movedor movedor
    - Mapa mapa

    + void atacar(Jugador jugador, int turno)
    + int atacado(int danio)
}

Enemigo <|-- Hormiga
Enemigo <|-- Arania
Enemigo <|-- Topo
Enemigo <|-- Lechuza

@enduml